@@ -1,3 +1,10 @@
+2010-08-18  Lynn Garren
+
+      * HepMC/TempParticleMap.h: add empty() and clear_temp_map() to help in
+        the cleanup efforts
+      * src/GenEventStreamIO.cc: cleanup if corrupt data is found
+      * src/StreamHelpers.cc: cleanup if corrupt data is found
+
 2010-07-30  Lynn Garren & Andy Buckley
 
       * src/GenEventStreamIO.cc: create GenCrossSection, PdfInfo, and HeavyIon
